@@ -1,6 +1,7 @@
 1.2.3i7:
     Core & Setup:
     * 0217 FIX: More verbose error output for SNMP errors on the command line...
+    * 0288 FIX: Error messages of datasource programs (e.g. VSphere Agent) are now visible within WATO...
 
     Checks & Agents:
     * 0060 cisco_fantray: new check for monitoring fan trays of Cisco Nexus switches
